kokegane no uta to CD collection

--- a/doqmeat/music/cds.html
+++ b/doqmeat/music/cds.html
@@ -141,15 +141,16 @@
 						<h3>アルターワー・セツナポップ / alterour setsuna pop - siinamota</h3>
 						<p><span class="placeholder"></span></p>
 						<p>got this for meee as a treat for my birthday!</p>
-						<p><small>will scan these later</small></p>
+						<p><small>will scan later</small></p>
 						<a class="i" href="!g/cds/setsunapop%20(3).jpg" target="_blank"><img src="!g/cds/setsunapop%20(3).jpg"></a>
 						<p>when you take out the CD a small siinamota is revealed in the background...</p>
 						<a class="i" href="!g/cds/setsunapop%20(4).jpg" target="_blank"><img src="!g/cds/setsunapop%20(4).jpg"></a>
+						<a class="i" href="!g/cds/setsunapop%20(5).jpg" target="_blank"><img src="!g/cds/setsunapop%20(5).jpg"></a>
 						<p>because of this purchase i noticed that the different illustrations in here (drawn by <a href="https://www.pixiv.net/en/users/5105537" target="_blank">meisa</a>) all form 1 picture when put together.</p>
 						<a class="i" href="!g/cds/setsuna-pop-meisa.jpg" target="_blank"><img src="!g/cds/setsuna-pop-meisa.jpg"></a>
 						<p>i had seen pictures of the <a title="archive.org" href="https://archive.org/details/setsuna-pop-limited-ed" target="_blank" class="outlink">scans</a> of this album before and yet i never noticed this. pretty neat!</p>
 						<p><span class="ver"> regular</span></p>
-						<p><span class="date"> 29.may.24</span></p>
+						<p><span class="date"> 27.may.24</span></p>
 					</div>
 				</div>
 			</div>
@@ -234,6 +235,22 @@
 		</div>
 		<!-- 			column 3 -->
 		<div class="column">
+			<div class="cd"><img src="!g/fav-albums/kokeganenouta.jpg">
+				<div class="hov">
+					<div class="caption">
+						<h3>コケガネのうた / kokegane no uta - siinamota</h3>
+						<p><span class="fav"></span></p>
+						<p><span class="placeholder"></span></p>
+						<p><small>will scan later</small></p>
+						<p>the 2nd birthday gift i got for myself :3 the first was the alterour setsuna pop CD!</p>
+						<p>i've seen ppl reselling this album for more than $100 usd so i am SO happy i was able to get it through cdjapan for less than that!! i love this EP from siinamota so much.</p>
+						<a class="i" href="!g/cds/kokegane-back.jpg" target="_blank"><img src="!g/cds/kokegane-back.jpg"></a>
+						<p>also this album has such an amazing art featured in it's jewel case and booklet... since then i've been following the artist, <a href="https://twitter.com/tocomomomo" target="_blank" class="outlink">momoc</a>, on social media.</p>
+
+						<p><span class="date"> 29.may.24</span></p>
+					</div>
+				</div>
+			</div>
 
 			<div class="cd"><img src="!g/cds/drippin-theend.jpg">
 				<div class="hov">
@@ -398,7 +415,7 @@
 	<div id="home"><a class="i" title="go back to music page" href="/music"><img src="/!g/deco/cd.gif"></a></div>
 
 	<footer>
-		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 12.jun.24</b>
+		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 13.jun.24</b>
 		<br>
 		<b>credit:</b> background is from yukika's soul lady photobook! / <a href="/notebook/links/fonts.html">fonts</a> used: natsuzemi, gaegu, spirit
 		<br>
