--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -190,29 +190,17 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p><span class="hl">watching:</span> dungeon meshi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> N/A</p>
-			<p><span class="hl">coding/writing:</span> N/A</p>
-			<p class="date">last updated on 09.jun.24</p>
+			<p><span class="hl">site:</span> working on some blog posts</p>
+			<p class="date">last updated on 12.jun.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
-			<li>12.jun.24: added new <a title="alterour setsuna pop" href="/music/cds">CD</a> to collection</li>
+			<li>12.jun.24: added new <a title="alterour setsuna pop + kokegane no uta" href="/music/cds">CD</a> to collection</li>
 			<li>09.jun.24: <a title="added sonic rush" href="/vgs">gaming log</a> updated</li>
 			<li>07.jun.24: new <a href="/collection/mail-stamps/index.html">mail stamp</a> in collection + <a href="/music/listening-log/2024/spring#5">dall</a> listening log</li>
 			<li>05.jun.24: added <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a> + new pics <a href="/photobook">photobook</a></li>
 			<li>04.jun.24: journal log: <a href="/journal">visiting AZ + 3DS</a></li>
-			<li>03.jun.24: scrapbook: <a href="/scrapbook/2024/index.html#jun">june</a></li>
-			<li>01.jun.24: new pics in <a href="photobook/index.html">photobook</a></li>
-			<li>26.may.24: journal log: <a href="/journal">portable CD player</a></li>
-			<li>22.may.24: <a href="/vgs/fallout-new-vegas/index.html">new vegas</a> log</li>
-			<li>21.may.24: created <a title="I JUST FOUND OUT 123guestbook is closing" href="/guestbook">guestbook</a> page!</li>
-			<li>20.may.24: journal log: <a href="/journal">free from uni</a> +<a title="i finished it!" href="/vgs/fallout-1">fallout</a> log</li>
-			<li>18.may.24: <a href="/collection/plushies/index.html">plushies</a> collection page is now live!</li>
-			<li>12.may.24: new featured song &amp; album in <a href="/music">music</a></li>
-			<li>09.may.24: added may page to <a href="/scrapbook/2024#may">scrapbook</a> + more <a href="collection/cats/index.html">cats</a></li>
-			<li>04.may.24: new journal log: <a href="/journal">end of 1st uni semester</a></li>
-			<li>02.may.24: new listening log: <a href="music/listening-log/2024/spring.html#4">3rd desire [reve]</a></li>
-			<li>21.apr.24: new notebook page: <a href="/notebook/sitely/info.html">site + tools info</a></li>
 			<li><a href="notebook/archive/updates.html">past updates</a></li>
 		</div>
 
