rewrote JS for modal

--- a/doqmeat/music/fav-albums.html
+++ b/doqmeat/music/fav-albums.html
@@ -8,8 +8,7 @@ this is like a frankenstein monster of all these codes
 -------------------
 color palette: 
 https://coolors.co/946e45-ca5251-d97634-e1d751-8bb25a-80beb5-aad0c0
---------------------
-img with a button in the center (its transparent here but thats what i used to make the modal work) = https://www.w3schools.com/howto/howto_css_button_on_image.asp 
+-------------------- 
 ------------------
 filter w/ buttons:
 https://www.w3schools.com/howto/howto_js_filter_elements.asp
@@ -50,7 +49,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 
 		<div id="lp-container">
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/sepiarecord.jpg">.jpg<button title="sepia record" class="btn" href="#sepiarecord"></button></div>
+			<div class="filterDiv wish float"><img src="!g/fav-albums/sepiarecord.jpg"><button title="sepia record" class="btn" onclick="popup('sepiarecord')"></button></div>
 			<div id="sepiarecord" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -85,7 +84,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv cd float"><img src="!g/fav-albums/Yukikasoullady.jpg"><button title="soul lady" class="btn" href="#soullady"></button></div>
+			<div class="filterDiv cd float"><img src="!g/fav-albums/Yukikasoullady.jpg"><button title="soul lady" class="btn" onclick="popup('soullady')"></button></div>
 			<div id="soullady" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -119,7 +118,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv float wish"><img src="!g/fav-albums/panorama.jpg"><button title="panorama" class="btn" href="#panorama"></button></div>
+			<div class="filterDiv float wish"><img src="!g/fav-albums/panorama.jpg"><button title="panorama" class="btn" onclick="popup('panorama')"></button></div>
 			<div id="panorama" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -131,7 +130,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv wish digi float"><img src="!g/fav-albums/kinonoyouni.jpg"><button title="君のように生きれたら (kimi no youni ikiretara)" class="btn" href="#kinonoyouni"></button></div>
+			<div class="filterDiv wish digi float"><img src="!g/fav-albums/kinonoyouni.jpg"><button title="君のように生きれたら (kimi no youni ikiretara)" class="btn" onclick="popup('kinonoyouni')"></button></div>
 			<div id="kinonoyouni" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -144,7 +143,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv digi float"><img src="!g/fav-albums/148.jpg"><button title="148" class="btn" href="#onefour"></button></div>
+			<div class="filterDiv digi float"><img src="!g/fav-albums/148.jpg"><button title="148" class="btn" onclick="popup('onefour')"></button></div>
 			<div id="onefour" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -160,8 +159,8 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv cd float"><img src="!g/fav-albums/ikiru.jpg"><button title="生きる (ikiru)" class="btn" href="#ikir"></button></div>
-			<div id="ikir" class="modal">
+			<div class="filterDiv cd float"><img src="!g/fav-albums/ikiru.jpg"><button title="生きる (ikiru)" class="btn" onclick="popup('ikiru')"></button></div>
+			<div id="ikiru" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
 					<h2>生きる (ikiru) - siinamota</h2>
@@ -183,7 +182,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv cd float"><img src="!g/fav-albums/serotonin2.jpg"><button title="serotonin II" class="btn" href="#serotonin"></button></div>
+			<div class="filterDiv cd float"><img src="!g/fav-albums/serotonin2.jpg"><button title="serotonin II" class="btn" onclick="popup('serotonin')"></button></div>
 			<div id="serotonin" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -199,7 +198,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv cd float"><img src="!g/fav-albums/villaintheend.jpg"><button title="villain : the end" class="btn" href="#villainend"></button></div>
+			<div class="filterDiv cd float"><img src="!g/fav-albums/villaintheend.jpg"><button title="villain : the end" class="btn" onclick="popup('villainend')"></button></div>
 			<div id="villainend" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -222,7 +221,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/maxandmatch.jpg"><button title="max & match" class="btn" href="#maxandmatch"></button></div>
+			<div class="filterDiv wish float"><img src="!g/fav-albums/maxandmatch.jpg"><button title="max & match" class="btn" onclick="popup('maxandmatch')"></button></div>
 			<div id="maxandmatch" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -235,7 +234,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv float"><img src="!g/fav-albums/acallfrommydream.jpg"><button title="a call from my dream" class="btn" href="#acallfromadream"></button></div>
+			<div class="filterDiv float"><img src="!g/fav-albums/acallfrommydream.jpg"><button title="a call from my dream" class="btn" onclick="popup('acallfromadream')"></button></div>
 			<div id="acallfromadream" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -247,7 +246,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/kokeganenouta.jpg"><button title="コケガネのうた (kokegane no uta)" class="btn" href="#kokegane"></button></div>
+			<div class="filterDiv cd float"><img src="!g/fav-albums/kokeganenouta.jpg"><button title="コケガネのうた (kokegane no uta)" class="btn" onclick="popup('kokegane')"></button></div>
 			<div id="kokegane" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -277,7 +276,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv cd float"><img src="!g/fav-albums/am.jpg"><button title="AM" class="btn" href="#am"></button></div>
+			<div class="filterDiv cd float"><img src="!g/fav-albums/am.jpg"><button title="AM" class="btn" onclick="popup('am')"></button></div>
 			<div id="am" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -291,7 +290,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/Kokyuu.jpg"><button title="kokyuu" class="btn" href="#kokyuu"></button></div>
+			<div class="filterDiv wish float"><img src="!g/fav-albums/Kokyuu.jpg"><button title="kokyuu" class="btn" onclick="popup('kokyuu')"></button></div>
 			<div id="kokyuu" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -306,7 +305,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv digi float"><img src="!g/fav-albums/minecraftvolalpha.jpg"><button title="minecraft : volume alpha" class="btn" href="#volumealpha"></button></div>
+			<div class="filterDiv digi float"><img src="!g/fav-albums/minecraftvolalpha.jpg"><button title="minecraft : volume alpha" class="btn" onclick="popup('volumealpha')"></button></div>
 			<div id="volumealpha" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -319,7 +318,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/slowdance.jpg"><button title="slow dance" class="btn" href="#slowdance"></button></div>
+			<div class="filterDiv wish float"><img src="!g/fav-albums/slowdance.jpg"><button title="slow dance" class="btn" onclick="popup('slowdance')"></button></div>
 			<div id="slowdance" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -333,7 +332,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv cd digi float"><img src="!g/fav-albums/trpp.jpg"><button title="trpp" class="btn" href="#trpp"></button></div>
+			<div class="filterDiv cd digi float"><img src="!g/fav-albums/trpp.jpg"><button title="trpp" class="btn" onclick="popup('trpp')"></button></div>
 			<div id="trpp" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -348,7 +347,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv float"><img src="!g/fav-albums/completebest.jpg"><button title="perfume ~complete best~" class="btn" href="#completebest"></button></div>
+			<div class="filterDiv float"><img src="!g/fav-albums/completebest.jpg"><button title="perfume ~complete best~" class="btn" onclick="popup('completebest')"></button></div>
 			<div id="completebest" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -361,7 +360,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/ave.jpg"><button title="ave" class="btn" href="#ave"></button></div>
+			<div class="filterDiv wish float"><img src="!g/fav-albums/ave.jpg"><button title="ave" class="btn" onclick="popup('ave')"></button></div>
 			<div id="ave" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -374,7 +373,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/hurtbreakwonderland.jpg"><button title="hurtbreak wonderland" class="btn" href="#hurtbreak"></button></div>
+			<div class="filterDiv wish float"><img src="!g/fav-albums/hurtbreakwonderland.jpg"><button title="hurtbreak wonderland" class="btn" onclick="popup('hurtbreak')"></button></div>
 			<div id="hurtbreak" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -388,7 +387,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/iffoundost.jpg" alt="if found album cover"><button title="if found..." class="btn" href="#iffound"></button></div>
+			<div class="filterDiv wish float"><img src="!g/fav-albums/iffoundost.jpg" alt="if found album cover"><button title="if found..." class="btn" onclick="popup('iffound')"></button></div>
 			<div id="iffound" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -401,7 +400,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv float digi"><img src="!g/fav-albums/qurqurqur.jpg"><button title="qurqurqur" class="btn" href="#qur"></button></div>
+			<div class="filterDiv float digi"><img src="!g/fav-albums/qurqurqur.jpg"><button title="qurqurqur" class="btn" onclick="popup('qur')"></button></div>
 			<div id="qur" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -414,7 +413,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv float"><img src="!g/fav-albums/spacemulan.jpg"><button title="space mulan" class="btn" href="#spacemulan"></button></div>
+			<div class="filterDiv float"><img src="!g/fav-albums/spacemulan.jpg"><button title="space mulan" class="btn" onclick="popup('spacemulan')"></button></div>
 			<div id="spacemulan" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -438,7 +437,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv digi float"><img src="!g/fav-albums/ghost.jpg"><button title="亡霊 (ghost)" class="btn" href="#ghost"></button></div>
+			<div class="filterDiv digi float"><img src="!g/fav-albums/ghost.jpg"><button title="亡霊 (ghost)" class="btn" onclick="popup('ghost')"></button></div>
 			<div id="ghost" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -451,7 +450,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/funeral.jpg"><button title="funeral" class="btn" href="#funeral"></button></div>
+			<div class="filterDiv wish float"><img src="!g/fav-albums/funeral.jpg"><button title="funeral" class="btn" onclick="popup('funeral')"></button></div>
 			<div id="funeral" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -463,7 +462,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv cd float"><img src="!g/fav-albums/depressioncherry.jpg"><button title="depression cherry" class="btn" href="#cherry"></button></div>
+			<div class="filterDiv cd float"><img src="!g/fav-albums/depressioncherry.jpg"><button title="depression cherry" class="btn" onclick="popup('cherry')"></button></div>
 			<div id="cherry" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -479,7 +478,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv float"><img src="!g/fav-albums/goblin.jpg"><button title="goblin" class="btn" href="#goblin"></button></div>
+			<div class="filterDiv float"><img src="!g/fav-albums/goblin.jpg"><button title="goblin" class="btn" onclick="popup('goblin')"></button></div>
 			<div id="goblin" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -494,7 +493,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/newpop.jpg"><button title="new pop" class="btn" href="#newpop"></button></div>
+			<div class="filterDiv wish float"><img src="!g/fav-albums/newpop.jpg"><button title="new pop" class="btn" onclick="popup('newpop')"></button></div>
 			<div id="newpop" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -508,7 +507,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/powapowaworks.jpg"><button title="powapowaworks" class="btn" href="#powapowaworks"></button></div>
+			<div class="filterDiv wish float"><img src="!g/fav-albums/powapowaworks.jpg"><button title="powapowaworks" class="btn" onclick="popup('powapowaworks')"></button></div>
 			<div id="powapowaworks" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -523,7 +522,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv cd float"><img src="!g/fav-albums/oohyofarfromthe.jpg"><button title="성난 도시로부터 멀리 (far from the madding city)" class="btn" href="#far"></button></div>
+			<div class="filterDiv cd float"><img src="!g/fav-albums/oohyofarfromthe.jpg"><button title="성난 도시로부터 멀리 (far from the madding city)" class="btn" onclick="popup('far')"></button></div>
 			<div id="far" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -537,7 +536,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv digi cd float"><img src="!g/fav-albums/spacetimeevents.jpg"><button title="空間、事情、時間、事象 (space, circumstances, time, and events.)" class="btn" href="#spacetime"></button></div>
+			<div class="filterDiv digi cd float"><img src="!g/fav-albums/spacetimeevents.jpg"><button title="空間、事情、時間、事象 (space, circumstances, time, and events.)" class="btn" onclick="popup('spacetime')"></button></div>
 			<div id="spacetime" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -551,7 +550,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv cd float"><img src="!g/fav-albums/yumenomanimani.jpg"><button title="yume no manimani" class="btn" href="#yumeno"></button></div>
+			<div class="filterDiv cd float"><img src="!g/fav-albums/yumenomanimani.jpg"><button title="yume no manimani" class="btn" onclick="popup('yumeno')"></button></div>
 			<div id="yumeno" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -570,7 +569,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 				</div>
 			</div>
 
-			<div class="filterDiv wish float"><img src="!g/fav-albums/celeste.jpg"><button title="celeste" class="btn" href="#celeste"></button></div>
+			<div class="filterDiv wish float"><img src="!g/fav-albums/celeste.jpg"><button title="celeste" class="btn" onclick="popup('celeste')"></button></div>
 			<div id="celeste" class="modal">
 				<div class="modal-content">
 					<div class="close"></div>
@@ -599,7 +598,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 		<br>
 		album scans in this page have all been scanned by me unless stated otherwise!
 		<br>
-		<b>credit:</b> page bg is from siinamota's <a href="https://archive.org/details/ikiru-scans/p3.png" target="_blank">ikiru</a> booklet / pop-up bg is from TRPP's self titled album booklet / JS pop-up code from <a href="https://stackoverflow.com/questions/40645032/creating-multiple-modals-on-a-single-page">stackoverflow</a> /
+		<b>credit:</b> page bg is from siinamota's <a href="https://archive.org/details/ikiru-scans/p3.png" target="_blank">ikiru</a> booklet / pop-up bg is from TRPP's self titled album booklet
 		<br>
 		<a href="/">home</a> <img src="/!g/pix/musicnote1.gif"> <a href="/music">music page</a> <img src="/!g/pix/musicnote1.gif"> <a href="/music/cds.html">CD collection</a> <img src="/!g/pix/musicnote1.gif"> <a href="#">top</a>
 	</footer>
@@ -607,39 +606,23 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 	<script>
 		// modal window js
 
-		var btn = document.querySelectorAll("button.btn");
-
-		var modals = document.querySelectorAll(".modal");
-
-		var spans = document.getElementsByClassName("close");
-
-		for (var i = 0; i < btn.length; i++) {
-			btn[i].onclick = function(e) {
-				e.preventDefault();
-				modal = document.querySelector(e.target.getAttribute("href"));
-				modal.style.display = "block";
-			};
-		}
-
-		for (var i = 0; i < spans.length; i++) {
-			spans[i].onclick = function() {
-				for (var index in modals) {
-					if (typeof modals[index].style !== "undefined")
-						modals[index].style.display = "none";
-				}
-			};
-		}
-
-		window.onclick = function(event) {
-			if (event.target.classList.contains("modal")) {
-				for (var index in modals) {
-					if (typeof modals[index].style !== "undefined")
-						modals[index].style.display = "none";
+		let closeDiv = document.getElementsByClassName("close");
+		for (var i = 0; i < closeDiv.length; i++) {
+			var closeDivClick = closeDiv[i];
+			closeDivClick.onclick = function() {
+				var modals = document.getElementsByClassName("modal");
+				for (var i = 0; i < modals.length; i++) {
+					modals[i].style.display = "none";
 				}
 			}
-		};
+		}
 
-		// tags buttons filter
+		function popup(album) {
+			var lps = document.getElementById(album);
+			lps.style.display = "block";
+		}
+
+		// tags buttons filter from here https://www.w3schools.com/howto/howto_js_filter_elements.asp
 
 		filterSelection("all");
 
