--- a/doqmeat/music/playlists.html
+++ b/doqmeat/music/playlists.html
@@ -4,13 +4,11 @@
 <head>
 	<!-- coded with love by des :3 meow -->
 	<meta charset="UTF-8">
-
-	<title>playlists</title>
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
+	<title>playlists</title>
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="frame.css" rel="stylesheet" type="text/css" media="all">
-
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
@@ -51,6 +49,7 @@
 		<h4>kpop</h4>
 		<p>basically a little bit of everything as kpop is basically a mix and match of many many genres but at least for my taste, i really enjoy the electronic, dance, and house inspired songs.</p>
 		<p><i>highlights:</i> rollercoaster - txt <img src="/!g/pix/starpink.gif"> secret tape - sunmi <img src="/!g/pix/starpink.gif"> neon - yukika <img src="/!g/pix/starpink.gif"> drunk dazed - enhypen <img src="/!g/pix/starpink.gif"> stone heart - taemin 2 <img src="/!g/pix/starpink.gif"> fast - superm</p>
+		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0sJwG0RCKuYtYVHb4dnkQP?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<details>
 			<summary>youtube playlist</summary>
 			<iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=-U2FK--T9R_DnSNA&amp;list=PLJJj3iCewWn3JZCpr4DNcjo6AOY4RfQaR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
