--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -144,7 +144,6 @@
 		<li><a href="https://nekocalc.com/px-to-rem-converter" target="_blank">px-to-rem</a> converter</li>
 		<li><a href="https://pixelsconverter.com/" target="_blank">pixelsconverter</a> - converts px to rem, em, inches, and more!</li>
 		<li><a href="https://www.xml-sitemaps.com/" target="_blank">xml-sitemaps</a> - creates a sitemap of your site!</li>
-		<li><a href="https://nohappynonsense.net/features/reallysimple" target="_blank">simple RSS feed maker</a></li>
 		<li><a href="https://viewportsizer.com/what-is-my-screen-size/" target="_blank">viewportsizer</a> - tells you your browser's screen size!</li>
 		<li><a href="https://tools.pingdom.com/" target="_blank">website speed tester</a> - tells you how fast does your website loads! very neat bc it also tells you which file types are taking most of the space in the page</li>
 		<li><a href="https://www.cursor.cc/" target="_blank">cursor.cc</a> - turn PNGs into cursors and also edit them!</li>
@@ -159,7 +158,7 @@
 		<li><a href="https://solaria.neocities.org/gifpausetut">solaria's pause gif without JS </a></li>
 		<li><a href="https://www.geeksforgeeks.org/how-to-switch-between-multiple-css-stylesheets-using-javascript/" target="_blank">how to switch between different stylesheets</a></li>
 		<li><a href="https://www.freecodecamp.org/news/what-is-rem-in-css-rem-unit-font-size-padding-height-and-more/" target="_blank">what is REM in CSS?</a> - an article explaining how this size works</li>
-
+		<li><a href="https://dokode.moe/blogs/" target="_blank">dokode.moe's blog</a> with tutorials</li>
 		<hr>
 
 
@@ -306,7 +305,7 @@
 		<li><a href="https://omoulo.com/digitalwellbeing" target="_blank">digital wellbeing</a> - a collection of links to enhance your digital privacy</li>
 		<li><a href="https://www.deadlinkchecker.com/website-dead-link-checker.asp" target="_blank">deadlinkchecker</a> - check dead links on entire website or specific page!</li>
 		<li><a href="https://www.drlinkcheck.com" target="_blank">dr. link checker</a> - another dead link checker</li>
-		<li>another <a href="https://ahrefs.com/backlink-checker/" target="_blank">backlink checker</a> - checks for sites that have linked you back!</li>
+		<li><a href="https://ahrefs.com/backlink-checker/" target="_blank">backlink checker</a> - checks for sites that have linked you back!</li>
 		<li><a href="http://calendar-muryou.com/" target="_blank">calendar-muryou</a> - site about making japanese calendars! it has lots of options</li>
 		<li><a href="https://www.y2mate.com" target="_blank">y2mate.com</a> - youtube MP4 or MP3 downloader</li>
 		<li><a href="https://www.deepl.com/translator" target="_blank">deepl.com</a> - most accurate translator you'll get. mostly use it for japanese</li>
