added some sites to map

--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -34,14 +34,17 @@
 		<li><a href="/" target="_parent">homepage</a></li>
 		<ul>
 			<li><a href="/about.html" target="_parent">about</a></li>
-			<li><a href="/journal/index.html" target="_parent">journal</a></li>
-			<li><a href="/microblog/index.html" target="_parent">microblog</a> <img src="/!g/pix/new1.gif"></li>
-			<li><a href="/blog/index.html" target="_parent">blog</a></li>
+			<li>writings</li>
+			<ul>
+				↳ <a href="/journal/index.html" target="_parent">journal</a>
+				<br> ↳ <a href="/microblog/index.html" target="_parent">microblog</a> <img src="/!g/pix/new1.gif">
+				<br> ↳ <a href="/blog/index.html" target="_parent">blog</a>
+			</ul>
 			<li><a href="/music/index.html" target="_parent">music</a></li>
 			<ul>
-				↳ <a href="/music/fav-albums.html" target="_parent">favorite albums</a>
-				<br> ↳ <a href="/music/artists-genres.html" target="_parent">favorite artists &amp; genres</a>
-				<br> ↳ <a href="/music/kpop-producers.html" target="_parent">favorite k-pop producers</a>
+				↳ <a href="/music/fav-albums.html" target="_parent">albums</a>
+				<br> ↳ <a href="/music/artists-genres.html" target="_parent">artists &amp; genres</a>
+				<br> ↳ <a href="/music/kpop-producers.html" target="_parent">k-pop producers</a>
 				<br> ↳ <a href="/music/featured.html" target="_parent">featured music</a>
 				<br> ↳ <a href="/music/cds.html" target="_parent">cd collection</a>
 				<br> ↳ <a href="/music/playlists.html" target="_parent">playlists</a>
@@ -49,7 +52,6 @@
 				<br> ↳ <a href="/music/recaps/index.html" target="_parent">yearly recaps</a>
 				<br> ↳ <a href="/music/strobe-light.html" target="_parent">strobe light secret page</a>
 			</ul>
-			<li><a href="/vgs" target="_parent">gaming log</a></li>
 			<li><a href="/shrines" target="_parent">shrines</a></li>
 			<ul>
 				↳ <a href="/shrines/mizu" target="_parent">mizu</a>
@@ -62,7 +64,14 @@
 				<br> ↳ <a href="/collection/cats" target="_parent">cat pics</a>
 				<br> ↳ <a href="/collection/plushies/index.html" target="_parent">plushies</a> <img src="/!g/pix/new1.gif">
 			</ul>
-			<li><a href="/wip" target="_parent">art</a> <img src="/!g/pix/caution1.gif"></li>
+			<li><b>media logs</b></li>
+			<ul>
+				↳ <a href="/vgs" target="_parent">video games</a>
+				<br> ↳ <a title="they are just lists ATM" href="/tv" target="_parent">TV</a> <img src="/!g/pix/new1.gif"> <img src="/!g/pix/caution1.gif">
+				<br> ↳ <a title="they are just lists ATM" href="/books" target="_parent">books</a> <img src="/!g/pix/new1.gif"> <img src="/!g/pix/caution1.gif">
+				<br> ↳ <a href="/music/listening-log" target="_parent">music</a>
+			</ul>
+			<li><a title="missing CSS" href="/art" target="_parent">art</a> <img src="/!g/pix/caution1.gif"></li>
 			<li><a href="/photobook" target="_parent">photobook</a></li>
 			<li><a href="/scrapbook" target="_parent">scrapbook</a></li>
 			<li><a href="/projects">web projects</a></li>
