featured song n album

--- a/doqmeat/music/featured.html
+++ b/doqmeat/music/featured.html
@@ -65,7 +65,23 @@ iframe2
 -->
 		<details open>
 			<summary>
-				<span class="date">12.may.24 - ? : 24 / dreamy drive</span>
+				<span class="date">14.jun.24 - ? : the hitchhiker's guide to the galaxy / sonic rush OST</span>
+			</summary>
+			<table>
+				<td class="t-left">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bcKKuhIJU6I?si=BPE_mkeGiSzYkEy-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					what a yummy song, it reminds of my melodic dubstep high school days
+				</td>
+				<td class="t-right">
+					<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=qsWgPoyvY46Rg7Sd&amp;list=PLvNp0Boas721Cm9CWT9eaSq_JxA3f_NAr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+					I AM SO OBSESSED WITH THIS SOUNDTRACK......
+				</td>
+			</table>
+		</details>
+
+		<details>
+			<summary>
+				<span class="date">12.may.24 - 14.jun.24 : 24 / dreamy drive</span>
 			</summary>
 			<table>
 				<td class="t-left">
