--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -30,8 +30,9 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
-			<b>07.jun.24</b> - new listening log! /
-				<b>12.may.24</b> - updated featured section!
+				<b>14.jun.24</b> - updated featured section! /
+				<b>12.jun.24</b> - added new CDs to collection /
+				<b>07.jun.24</b> - new listening log!
 			</marquee>
 		</div>
 
@@ -89,14 +90,14 @@
 		<div id="featured" class="box">
 			<h4>featured song &amp; album</h4>
 			<div class="song">
-				<b>24</b> by tripleS
-				<iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/aZ2QoM6tBYY?si=IcKuSeYMilWbAp1g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-				<p>very catchy and fun song and it kinda has that fnaf's beat to it that i love</p>
+				<b>The hitchhiker's guide to the galaxy</b> by ARTMS
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/bcKKuhIJU6I?si=BPE_mkeGiSzYkEy-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				what a yummy song, it reminds of my melodic dubstep high school days.
 			</div>
 			<div class="lp">
-				<b>dreamy drive</b> by conut
-				<iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=GnTXZuM9uqc5j-el&amp;list=OLAK5uy_kSUQiKoKqyTnHhCyRPV03P78IgKS7cs8A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-				<p>nice and chill korean indie release! had been meaning to listen it for a while! very refreshing</p>
+				<b>sonic rush OST</b> by hideki naganuma
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=qsWgPoyvY46Rg7Sd&amp;list=PLvNp0Boas721Cm9CWT9eaSq_JxA3f_NAr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+				I AM SO OBSESSED WITH THIS SOUNDTRACK......
 			</div>
 			<hr>
 			<center><small>past featured music can be found <a href="featured.html">here</a></small></center>
