--- a/doqmeat/music/index.html
+++ b/doqmeat/music/index.html
@@ -31,7 +31,7 @@
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
 				<b>14.jun.24</b> - updated featured section! /
-				<b>12.jun.24</b> - added new CDs to collection /
+				<b>12.jun.24</b> - added new CDs in collection /
 				<b>07.jun.24</b> - new listening log!
 			</marquee>
 		</div>
