watched some dungeon meshi

--- a/doqmeat/tv/index.html
+++ b/doqmeat/tv/index.html
@@ -18,7 +18,7 @@
 	<h1>TV log</h1>
 	<h2>current</h2>
 	<ul>
-		<li>dungeon meshi -- S1 9/?</li>
+		<li>dungeon meshi -- 21/24</li>
 		<li>home movies -- 47/42</li>
 		<li>revolutionary girl utena -- 27/39</li>
 	</ul>
